vlib/v/checker/tests/cannot_dereference_if_different_muls.vv
fn freelist_free(page u64) {
	freelist_head := &u64(unsafe { nil })
	higher_half := u64(0)
	unsafe {
		mut ptr := &u64(page + higher_half)
		*ptr = freelist_head
		freelist_head = ptr
	}
}

fn main() {
	freelist_free(0)
}
